--- a/assets/css/standard.css
+++ b/assets/css/standard.css
@@ -1,4 +1,5 @@
-body{
+html, body {
+    height: 100%;
     margin: 0;
 }
 
@@ -18,7 +19,7 @@ body{
     justify-content: space-between;
 }
 
-.cursor{
+button{
     cursor: pointer;
 }
 
@@ -33,4 +34,10 @@ body{
 a{
     text-decoration: none;
     color: black;
+}
+
+.display{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
