--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@
 }
 
 .bg_img {
-    background-image: url("img/background.jpg");
+    background-image: url("img/poketball_BG.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
